# SnapTeX

./: .gitignore  README.md  pyproject.toml
docs/: BLUEPRINT.md
scripts/: benchmark.py  export_onnx.py
src-tauri/: Cargo.toml  dev-smoke.err.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  commands.rs  main.rs
src-tauri/src/capture/: clipboard.rs  hotkey.rs  mod.rs  overlay.rs
src-tauri/src/export/: latex.rs  markdown.rs  mathml.rs  mod.rs  typst.rs
src-tauri/src/inference/: decoder_loop.rs  mod.rs  postprocessor.rs  preprocessor.rs  recognizer.rs  tokenizer.rs
src/snaptex/: __init__.py  __main__.py  app.py  clipboard.py  config.py  controller.py  ui.py  workers.py
test_images/: manifest.json
tools/: uninstall.py
